--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.14.6",
+    "posthog-js": "^1.160.0",
     "preact": "^10.23.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
