--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "caz",
+  "name": "cazcik",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "deploy": "cloudflare && wrangler deploy",
+    "preview": "cloudflare && wrangler dev",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+  },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18"
+  },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.4",
-    "typescript": "^5.6.3"
+    "@cloudflare/workers-types": "^4.20241011.0",
+    "@opennextjs/cloudflare": "^0.2.1",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "wrangler": "^3.81.0"
   }
 }
