--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,3 +10,8 @@ minify = true
 
 # Use the new Workers + Assets to host the static frontend files
 assets = { directory = ".worker-next/assets", binding = "ASSETS" }
+
+# Custom domain
+routes = [
+    { pattern = "cazcik.com", custom_domain = true }
+]
