--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@remixicon/react": "^4.3.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
