--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,21 +1,17 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "cazcik"
+name = "cazcik-website"
 main = ".worker-next/index.mjs"
 
 compatibility_date = "2024-09-26"
 compatibility_flags = ["nodejs_compat"]
 
-# Minification helps to keep the Worker bundle size down and improve start up time.
 minify = true
 
-# Use the new Workers + Assets to host the static frontend files
 assets = { directory = ".worker-next/assets", binding = "ASSETS" }
 
-# Custom domain
 routes = [
     { pattern = "cazcik.com", custom_domain = true }
 ]
 
-# Workers logs
 [observability]
 enabled = true
