--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "cazcik-website"
+name = "cazcik"
 main = ".worker-next/index.mjs"
 
 compatibility_date = "2024-09-26"
