--- a/package.json
+++ b/package.json
@@ -5,30 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "deploy": "cloudflare && wrangler deploy",
-    "preview": "cloudflare && wrangler dev",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "start": "next start"
   },
   "dependencies": {
-    "@remixicon/react": "^4.5.0",
-    "next": "14.2.20",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241205.0",
-    "@opennextjs/cloudflare": "^0.2.1",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
+    "@remixicon/react": "^4.6.0",
+    "@types/node": "^22.10.3",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "clsx": "^2.1.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2",
-    "wrangler": "^3.95.0"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   },
   "prettier": {
     "plugins": [
