--- a/package.json
+++ b/package.json
@@ -1,38 +1,14 @@
 {
-  "name": "website",
-  "version": "0.0.0",
-  "private": true,
+  "name": "cazcik",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "astro dev",
+    "build": "astro build"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.3",
-    "@remixicon/react": "^4.6.0",
-    "clsx": "^2.1.1",
-    "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "remark-gfm": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
-  },
-  "prettier": {
-    "plugins": [
-      "prettier-plugin-tailwindcss"
-    ]
-  },
-  "packageManager": "pnpm@9.12.2"
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "^5.2.5",
+    "tailwindcss": "^4.0.3"
+  }
 }
