--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.2.0",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/postcss": "^4.0.8",
     "@types/node": "^20",
