--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
     "@headlessui/react": "^2.2.0",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "clsx": "^2.1.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.8",
     "typescript": "^5"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
