--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "wrangler": "^4.14.4"
+  },
+  "packageManager": "pnpm@10.10.0",
+  "engines": {
+    "node": ">=23.11.0"
   }
 }
