--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,9 +10,15 @@
   "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS",
-    "directory": "./dist"
+    "directory": "./dist",
   },
   "observability": {
-    "enabled": true
-  }
+    "enabled": true,
+  },
+  "routes": [
+    {
+      "custom_domain": true,
+      "pattern": "cazcik.com",
+    },
+  ],
 }
