--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "cazcik-com",
-  "type": "module",
-  "version": "0.0.1",
+  "name": "website",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro build && wrangler dev",
-    "astro": "astro",
-    "deploy": "astro build && wrangler deploy",
-    "typegen": "wrangler types"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.5.2",
-    "@tailwindcss/vite": "^4.1.6",
-    "astro": "^5.7.12",
-    "tailwindcss": "^4.1.6"
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250510.0",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "wrangler": "^4.14.4"
-  },
-  "packageManager": "pnpm@10.10.0",
-  "engines": {
-    "node": ">=23.11.0"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
